--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,9 @@ web_modules/
 # TypeScript cache
 *.tsbuildinfo
 
+# NestJS build output
+dist/
+
 # Optional npm cache directory
 .npm
 
@@ -78,6 +81,8 @@ web_modules/
 .env.test.local
 .env.production.local
 .env.local
+.env.local
+.env.*.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -134,3 +139,9 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
