feat(notifications): initialize notifications microservice with basic CRUD operations
- Added package.json for notifications service with dependencies and scripts.
- Implemented AppController and AppService for basic health check and welcome message.
- Created NotificationsModule, NotificationsController, and NotificationsService for managing notifications.
- Defined Notification interface and DTOs for creating and updating notifications.
- Implemented in-memory storage for notifications with methods for CRUD operations.
- Configured TypeScript settings for notifications service.

feat(users): initialize users microservice with basic CRUD operations

- Added package.json for users service with dependencies and scripts.
- Implemented AppController and AppService for basic health check and welcome message.
- Created UsersModule, UsersController, and UsersService for managing users.
- Defined User interface and DTOs for creating and updating users.
- Implemented in-memory storage for users with methods for CRUD operations.
- Configured TypeScript settings for users service.

build(users): add Dockerfile for users service

- Created Dockerfile to build and run users service in a containerized environment.

docs(users): add README for users service

- Added README.md with installation instructions, endpoints, and example user.

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,42 @@
-# Puerto del servidor
-PORT=3000
+# Configuración del Monorepo de Microservicios
+
+# Puerto del API Gateway
+GATEWAY_PORT=80
+
+# Puertos de los microservicios
+USERS_SERVICE_PORT=3001
+NOTIFICATIONS_SERVICE_PORT=3002
 
 # Configuración de la aplicación
 NODE_ENV=development
 
-# Configuración de Kafka (para futuras implementaciones)
+# Configuración de Kafka
 KAFKA_BROKERS=localhost:9092
-KAFKA_CLIENT_ID=nestjs-app
+KAFKA_CLIENT_ID_USERS=users-service
+KAFKA_CLIENT_ID_NOTIFICATIONS=notifications-service
+
+# Configuración de Zookeeper
+ZOOKEEPER_CLIENT_PORT=2181
+ZOOKEEPER_TICK_TIME=2000
+
+# Configuración de Kafka interna
+KAFKA_BROKER_ID=1
+KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
+KAFKA_AUTO_CREATE_TOPICS_ENABLE=true
+
+# Variables de servicios individuales
+# Users Service
+USERS_DB_HOST=localhost
+USERS_DB_PORT=5432
+USERS_DB_NAME=users_db
+
+# Notifications Service  
+NOTIFICATIONS_DB_HOST=localhost
+NOTIFICATIONS_DB_PORT=5433
+NOTIFICATIONS_DB_NAME=notifications_db
+
+# Configuración de correo (para notificaciones)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-password
