feat: enhance environment configuration and management script for microservices

--- a/.env.production
+++ b/.env.production
@@ -1,10 +1,10 @@
 # =================================
-# CONFIGURACIÓN DEL MONOREPO
+# CONFIGURACIÓN PARA PRODUCCIÓN
 # =================================
 
 # Entorno general
-NODE_ENV=development
-COMPOSE_PROJECT_NAME=kafka-nestjs-microservices
+NODE_ENV=production
+COMPOSE_PROJECT_NAME=kafka-nestjs-microservices-prod
 
 # =================================
 # PUERTOS DE SERVICIOS
@@ -18,12 +18,12 @@ NOTIFICATIONS_SERVICE_PORT=3002
 # =================================
 KAFKA_PORT=9092
 KAFKA_BROKER_ID=1
-KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
-KAFKA_AUTO_CREATE_TOPICS_ENABLE=true
+KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=3
+KAFKA_AUTO_CREATE_TOPICS_ENABLE=false
 
 # Configuración interna de Kafka
-KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:9092
-KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
+KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT
 KAFKA_INTER_BROKER_LISTENER_NAME=PLAINTEXT
 
 # =================================
@@ -37,28 +37,28 @@ ZOOKEEPER_TICK_TIME=2000
 # =================================
 
 # Users Service
-USERS_KAFKA_CLIENT_ID=users-service
-USERS_DB_HOST=localhost
+USERS_KAFKA_CLIENT_ID=users-service-prod
+USERS_DB_HOST=users-db
 USERS_DB_PORT=5432
-USERS_DB_NAME=users_db
+USERS_DB_NAME=users_prod
 
 # Notifications Service
-NOTIFICATIONS_KAFKA_CLIENT_ID=notifications-service
-NOTIFICATIONS_DB_HOST=localhost
-NOTIFICATIONS_DB_PORT=5433
-NOTIFICATIONS_DB_NAME=notifications_db
+NOTIFICATIONS_KAFKA_CLIENT_ID=notifications-service-prod
+NOTIFICATIONS_DB_HOST=notifications-db
+NOTIFICATIONS_DB_PORT=5432
+NOTIFICATIONS_DB_NAME=notifications_prod
 
 # =================================
 # CONFIGURACIÓN DE CORREO (Notificaciones)
 # =================================
-SMTP_HOST=smtp.gmail.com
+SMTP_HOST=smtp.sendgrid.net
 SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
-SMTP_PASS=your-app-password
+SMTP_USER=apikey
+SMTP_PASS=your-sendgrid-api-key
 
 # =================================
-# CONFIGURACIÓN DE DESARROLLO
+# CONFIGURACIÓN DE PRODUCCIÓN
 # =================================
-# Hot reload para desarrollo
-CHOKIDAR_USEPOLLING=true
-WATCHPACK_POLLING=true
+# Desactivar polling para producción
+CHOKIDAR_USEPOLLING=false
+WATCHPACK_POLLING=false
