--- a/.env.test
+++ b/.env.test
@@ -1,35 +1,35 @@
 # =================================
-# CONFIGURACIÓN DEL MONOREPO
+# CONFIGURACIÓN PARA TESTING
 # =================================
 
 # Entorno general
-NODE_ENV=development
-COMPOSE_PROJECT_NAME=kafka-nestjs-microservices
+NODE_ENV=test
+COMPOSE_PROJECT_NAME=kafka-nestjs-microservices-test
 
 # =================================
-# PUERTOS DE SERVICIOS
+# PUERTOS DE SERVICIOS (diferentes para evitar conflictos)
 # =================================
-GATEWAY_PORT=80
-USERS_SERVICE_PORT=3001
-NOTIFICATIONS_SERVICE_PORT=3002
+GATEWAY_PORT=8080
+USERS_SERVICE_PORT=3101
+NOTIFICATIONS_SERVICE_PORT=3102
 
 # =================================
 # CONFIGURACIÓN DE KAFKA
 # =================================
-KAFKA_PORT=9092
+KAFKA_PORT=9192
 KAFKA_BROKER_ID=1
 KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
 KAFKA_AUTO_CREATE_TOPICS_ENABLE=true
 
 # Configuración interna de Kafka
-KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:9092
+KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9192,PLAINTEXT_HOST://localhost:9192
 KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
 KAFKA_INTER_BROKER_LISTENER_NAME=PLAINTEXT
 
 # =================================
 # CONFIGURACIÓN DE ZOOKEEPER
 # =================================
-ZOOKEEPER_CLIENT_PORT=2181
+ZOOKEEPER_CLIENT_PORT=2281
 ZOOKEEPER_TICK_TIME=2000
 
 # =================================
@@ -37,28 +37,27 @@ ZOOKEEPER_TICK_TIME=2000
 # =================================
 
 # Users Service
-USERS_KAFKA_CLIENT_ID=users-service
+USERS_KAFKA_CLIENT_ID=users-service-test
 USERS_DB_HOST=localhost
-USERS_DB_PORT=5432
-USERS_DB_NAME=users_db
+USERS_DB_PORT=5532
+USERS_DB_NAME=users_test
 
 # Notifications Service
-NOTIFICATIONS_KAFKA_CLIENT_ID=notifications-service
+NOTIFICATIONS_KAFKA_CLIENT_ID=notifications-service-test
 NOTIFICATIONS_DB_HOST=localhost
-NOTIFICATIONS_DB_PORT=5433
-NOTIFICATIONS_DB_NAME=notifications_db
+NOTIFICATIONS_DB_PORT=5533
+NOTIFICATIONS_DB_NAME=notifications_test
 
 # =================================
-# CONFIGURACIÓN DE CORREO (Notificaciones)
+# CONFIGURACIÓN DE CORREO (Mock para testing)
 # =================================
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
-SMTP_PASS=your-app-password
+SMTP_HOST=smtp.mailtrap.io
+SMTP_PORT=2525
+SMTP_USER=test-user
+SMTP_PASS=test-pass
 
 # =================================
-# CONFIGURACIÓN DE DESARROLLO
+# CONFIGURACIÓN DE TESTING
 # =================================
-# Hot reload para desarrollo
-CHOKIDAR_USEPOLLING=true
-WATCHPACK_POLLING=true
+CHOKIDAR_USEPOLLING=false
+WATCHPACK_POLLING=false
