--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,15 @@ services:
       context: ./services/users
       dockerfile: Dockerfile
     ports:
-      - "3001:3001"
+      - "${USERS_SERVICE_PORT}:${USERS_SERVICE_PORT}"
     environment:
-      - PORT=3001
-      - NODE_ENV=development
-      - KAFKA_BROKERS=kafka:9092
-      - KAFKA_CLIENT_ID=users-service
+      - PORT=${USERS_SERVICE_PORT}
+      - NODE_ENV=${NODE_ENV}
+      - KAFKA_BROKERS=kafka:${KAFKA_PORT}
+      - KAFKA_CLIENT_ID=${USERS_KAFKA_CLIENT_ID}
+      - DB_HOST=${USERS_DB_HOST}
+      - DB_PORT=${USERS_DB_PORT}
+      - DB_NAME=${USERS_DB_NAME}
     depends_on:
       - kafka
     networks:
@@ -26,12 +29,19 @@ services:
       context: ./services/notifications
       dockerfile: Dockerfile
     ports:
-      - "3002:3002"
+      - "${NOTIFICATIONS_SERVICE_PORT}:${NOTIFICATIONS_SERVICE_PORT}"
     environment:
-      - PORT=3002
-      - NODE_ENV=development
-      - KAFKA_BROKERS=kafka:9092
-      - KAFKA_CLIENT_ID=notifications-service
+      - PORT=${NOTIFICATIONS_SERVICE_PORT}
+      - NODE_ENV=${NODE_ENV}
+      - KAFKA_BROKERS=kafka:${KAFKA_PORT}
+      - KAFKA_CLIENT_ID=${NOTIFICATIONS_KAFKA_CLIENT_ID}
+      - DB_HOST=${NOTIFICATIONS_DB_HOST}
+      - DB_PORT=${NOTIFICATIONS_DB_PORT}
+      - DB_NAME=${NOTIFICATIONS_DB_NAME}
+      - SMTP_HOST=${SMTP_HOST}
+      - SMTP_PORT=${SMTP_PORT}
+      - SMTP_USER=${SMTP_USER}
+      - SMTP_PASS=${SMTP_PASS}
     depends_on:
       - kafka
     networks:
@@ -45,8 +55,8 @@ services:
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
     environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
+      ZOOKEEPER_CLIENT_PORT: ${ZOOKEEPER_CLIENT_PORT}
+      ZOOKEEPER_TICK_TIME: ${ZOOKEEPER_TICK_TIME}
     networks:
       - microservices-network
     restart: unless-stopped
@@ -57,15 +67,15 @@ services:
     depends_on:
       - zookeeper
     ports:
-      - "9092:9092"
+      - "${KAFKA_PORT}:${KAFKA_PORT}"
     environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
+      KAFKA_BROKER_ID: ${KAFKA_BROKER_ID}
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:${ZOOKEEPER_CLIENT_PORT}
+      KAFKA_ADVERTISED_LISTENERS: ${KAFKA_ADVERTISED_LISTENERS}
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: ${KAFKA_LISTENER_SECURITY_PROTOCOL_MAP}
+      KAFKA_INTER_BROKER_LISTENER_NAME: ${KAFKA_INTER_BROKER_LISTENER_NAME}
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: ${KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR}
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: '${KAFKA_AUTO_CREATE_TOPICS_ENABLE}'
     networks:
       - microservices-network
     restart: unless-stopped
@@ -74,7 +84,7 @@ services:
   api-gateway:
     image: nginx:alpine
     ports:
-      - "80:80"
+      - "${GATEWAY_PORT}:80"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
     depends_on:
