--- a/services/notifications/package.json
+++ b/services/notifications/package.json
@@ -10,18 +10,23 @@
     "start:watch": "ts-node --watch src/main.ts"
   },
   "dependencies": {
-    "@nestjs/core": "^10.0.0",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "kafkajs": "^2.2.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
+    "@types/node": "^20.0.0",
     "ts-node": "^10.9.0",
-    "@types/node": "^20.0.0"
+    "typescript": "^5.0.0"
   },
-  "keywords": ["nestjs", "notifications", "microservice"],
+  "keywords": [
+    "nestjs",
+    "notifications",
+    "microservice"
+  ],
   "author": "",
   "license": "ISC"
 }
